# Autonomous-Nursing-Android

./: .gitignore  .rosinstall  README.md  baxter.sh  lab_map_2.pgm  lab_map_2.yaml  recording.flac  requirements.txt  setup.sh
config/: first_map.rviz
src/: .rosinstall  arm_vision_visuals.launch  launch_file.launch  launch_no_output.launch  package.xml
src/base_movement/: CMakeLists.txt  base_movement.launch  base_movement_subscriber.launch  move.launch  package.xml  readme.md
src/base_movement/cmake/: ridgeback_navigationConfig.cmake
src/base_movement/launch/: amcl_demo.launch  base_movement.launch  gmapping_demo.launch  odom_navigation_demo.launch  view_robot.launch  waypoint_bridge.launch
src/base_movement/maps/: lab_map.pgm  lab_map.yaml  test_map.pgm  test_map.yaml
src/base_movement/params/: base_local_planner_params.yaml  costmap_common_params.yaml
src/base_movement/rviz/: localization.rviz
src/base_movement/src/: odometry_subscriber.py   twist_publisher_test.py  waypoint_bridge.py  waypoint_test.py  waypoint_to_robot_test.py
src/baxter_arms/: CMakeLists.txt  README.txt  how_to_run_baxter.txt  package.xml
src/database/: world.db
src/db/: build_db.py  query_db_demo.py
src/main/: package.xml
src/main/src/: main.py  (+1 more)
src/mapping/: first_map.pgm  first_map.yaml
src/speech/: CMakeLists.txt  api_setup.sh  package.xml  speech.py  speech_to_text.py
src/test_tts/: CMakeLists.txt  package.xml
src/test_tts/keys/: gpeechkey.json
src/vision/: CMakeLists.txt  package.xml  vision.launch  vision_ros.launch
src/visuals/: CMakeLists.txt  package.xml
(+44 files in other folders)
