<?xml version="1.0"?>
<package format="2">
  <name>test_tts</name>
  <version>0.0.1</version>
  <description>The test text-to-speech package</description>

  <maintainer email="joe.o.gardner@gmail.com">Joe</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/joeggg</url>
  <author email="joe.o.gardner@gmail.com">Joe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sound_play</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
